examples/fail/from_import_module_missing.hax
module Fail::FromImportModuleMissing;

from ZZZ::ThisModuleDoesNotExist import Present;

sub main() -> Int {
  return 0;
}
